[tool.poetry]
name = "starstruck"
version = "1.0.0"
description = "Displays a GitHub user's repositories and stars"
authors = ["Cody Logan <clpo13@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/clpo13/starstruck"

[tool.poetry.scripts]
starstruck = 'starstruck:main'

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
